# CMP3060_ComputerGraphics_labs

./: CMakeLists.txt  README.md  main.cpp
assets/shaders/: simple.frag  simple.vert
